--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -34,7 +34,7 @@
                     <mat-expansion-panel-header class="mat-row">
                       <span class="col-xs-2">{{ material.materialName }} </span>
                       <span class="col-xs-2"> {{ material.rfqMaterialQty }} </span>
-                      <span class="col-xs-1" *ngFor="let brand of material.brandList">
+                      <span class="col-xs-1" *ngFor="let brand of material.brandNames">
                         {{ brand }}
                       </span>
                     </mat-expansion-panel-header>
