--- a/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
@@ -1,5 +1,5 @@
 <!-- <fix-header></fix-header> -->
-<div class="page-start-point">
+<div>
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row black-border">
       <div class="col-sm-12 p-t-20 p-b-10">
