--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -16,7 +16,7 @@
           Add User
         </button>
       </div>
-<ng-container *ngIf="activateUsers.length > 0">
+<ng-container *ngIf="dataSourceActivate.length > 0">
   <mat-expansion-panel class="myPanel">
     <mat-expansion-panel-header>
       <div class="row p-t-10 p-b-10">
@@ -98,7 +98,7 @@
 </ng-container>
 <p></p>
 
-<ng-container *ngIf="deactivateUsers.length > 0">
+<ng-container *ngIf="dataSourceActivate && dataSourceActivate.length > 0">
   <mat-expansion-panel  class="myPanel">
     <mat-expansion-panel-header>
       <div class="row p-t-10 p-b-10">
