--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,6 +14,6 @@
     @import "./pages/bom-preview.scss";
     @import "./pages/global-store.component.scss";
     @import "./pages/initiate-po.component.scss";
-
+    @import "./pages/po-card.component.scss";
     @import "./pages/users.scss";
     @import "./pages/supplier.scss";
