--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,16 @@
-
-<mat-sidenav-container>
+<!-- <mat-sidenav-container>
   <mat-sidenav class="sidenav" #sidenav [fixedInViewport]="true" [mode]="'over'">
-
     <button class="menu-close" (click)="sidenav.close()" mat-icon-button>
-        <mat-icon>close</mat-icon>
+      <mat-icon>close</mat-icon>
     </button>
-
     <app-sidenav-list></app-sidenav-list>
-
-
-</mat-sidenav>
+  </mat-sidenav>
   <mat-sidenav-content>
-      <!-- <app-global-loader></app-global-loader> -->
+    <app-header (sidenavToggle)="sidenav.toggle()" [menu]="sidenav"></app-header>
 
-      
-      <app-header (sidenavToggle)="sidenav.toggle()" [menu]="sidenav"></app-header>
-      
-      <router-outlet></router-outlet>
-
-      <!-- <ng-snotify></ng-snotify> -->
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
+<router-outlet></router-outlet>
 
 <!-- <app-footer></app-footer> -->
 
