--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -1,5 +1,5 @@
     <form [formGroup]="projectDetails" (ngSubmit)="submit()">
-        <div class="row">
+        <div class="row ">
             <span class="m-r-35 p-l-15" *ngIf="!viewMode">
                 P.O.No.:
                 <mat-form-field class="border-input">
@@ -17,7 +17,7 @@
             </span>
             <span *ngIf="viewMode">P.O.Vaid Till:{{cardData.poValidUpto}}</span>
         </div>
-        <mat-grid-list cols="2" rowHeight="100px">
+        <mat-grid-list cols="2" rowHeight="100px" class="poCard">
             <mat-grid-tile [colspan]="1" [rowspan]="2">
                 <div class="col-xs-12 pull-left">
                     <div class="row">
