--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -9,7 +9,7 @@
         <form *ngIf="poTableData" [formGroup]="poForms" (ngSubmit)="sumbit()">
             <mat-accordion displayMode="flat" multi class="mat-table" formArrayName="forms">
                 <section matSort class="mat-elevation-z2 mat-header-row">
-                    <span class="mat-header-cell" mat-sort-header="vesselName">S.No</span>
+                    <span class="mat-header-cell widthReduce" mat-sort-header="vesselName">S.No</span>
                     <span class="mat-header-cell" mat-sort-header="vesselId">Material Name</span>
                     <span class="mat-header-cell" mat-sort-header="vesselStatus">Makes</span>
                     <span class="mat-header-cell" mat-sort-header="ircs">Supplier Rate</span>
@@ -21,7 +21,7 @@
                 </section>
                 <div *ngFor="let material of poTableData; let m = index" [formGroupName]="m">
                     <div class="mat-row">
-                        <span class="mat-cell">{{ m }}</span>
+                        <span class="mat-cell widthReduce">{{ m+1 }}</span>
                         <span class="mat-cell">{{ material.materialName }}</span>
                         <span class="mat-cell"></span>
                         <span class="mat-cell"></span>
@@ -36,23 +36,23 @@
             let purchaseOrder of material.purchaseOrderDetailList;
             let p = index
           " [formGroupName]="p">
-                            <span class="mat-cell"></span>
-                            <span class="mat-cell"></span>
+                            <span class="mat-cell .widthReduce"></span>
+                            <span class=" mat-cell"></span>
                             <span class="mat-cell">{{ purchaseOrder.materialBrand }}</span>
                             <span class="mat-cell m-r-15">
-                                <mat-form-field class="border-input">
+                                <mat-form-field class="border-input width50Percent">
                                     <input matInput #rate formControlName="materialQuantity" placeholder="rate" />
                                 </mat-form-field>
                             </span>
                             <span class="mat-cell m-r-15">
-                                <mat-form-field class="border-input">
+                                <mat-form-field class="border-input width50Percent">
                                     <input matInput #quantity formControlName="materialUnitPrice"
                                         placeholder="quantity" />
                                 </mat-form-field>
                             </span>
                             <span class="mat-cell">{{ rate.value * quantity.value }}</span>
                             <span class="mat-cell">
-                                <mat-form-field class="border-input">
+                                <mat-form-field class="border-input width50Percent">
                                     <input matInput #gst formControlName="gst" placeholder="GST%" class="m-r-5" />
                                 </mat-form-field>
                             </span>
@@ -63,19 +63,20 @@
 
                         </div>
                     </ng-container>
-                    <div class="mat-row">
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"></span>
-                        <span class="mat-cell"><span>GST Amount(Rs)</span>
-                            <br>{{gstTotalAmount | number : '1.2-2'}}</span>
-                        <span class="mat-cell"><span>Total Amount(Rs)</span>
-                            <br>{{totalAmount  | number : '1.2-2'}}</span>
-                    </div>
+
+                </div>
+                <div class="mat-row">
+                    <span class="mat-cell width50Percent"></span>
+                    <span class=" mat-cell"></span>
+                    <span class="mat-cell"></span>
+                    <span class="mat-cell"></span>
+                    <span class="mat-cell"></span>
+                    <span class="mat-cell"></span>
+                    <span class="mat-cell"></span>
+                    <span class="mat-cell"><span>GST Amount(Rs)</span>
+                        <br>{{gstTotalAmount | number : '1.2-2'}}</span>
+                    <span class="mat-cell"><span>Total Amount(Rs)</span>
+                        <br>{{totalAmount  | number : '1.2-2'}}</span>
                 </div>
             </mat-accordion>
         </form>
