--- a/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
@@ -1,17 +1,23 @@
-<div class="row submit-bid-row">
-  <div class="submit-bid-div">
-    <div class="image-orange-tick">
-      <img src="../../../../assets/images/orange-tick.png" alt="BuildSupply_Logo">
-    </div>
-
-    <div class="bid-material">
-      Bid Completion: <b>{{brandCount}} / {{materialCount}}</b>
-    </div>
-    <div class="thank-you">
-      Thank You
-    </div>
-    <div class="quotes-submitted">
-      your quotes are sumitted sussesfully.
+<!-- <fix-header></fix-header> -->
+<div>
+  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="row submit-bid-row">
+      <div class="submit-bid-div">
+        <div class="image-orange-tick">
+          <img src="../../../../assets/images/orange-tick.png" alt="BuildSupply_Logo">
+        </div>
+         
+         <div class="bid-material">
+           Bid Completion: <b>{{brandCount}} / {{materialCount}}</b>
+         </div>
+         <div class="thank-you">
+         Thank You
+         </div>
+         <div class="quotes-submitted">
+          your quotes are sumitted sussesfully.
+         </div>
+         
+      </div>
     </div>
 
   </div>
