--- a/src/app/shared/layout/supplier-bid-layout/supplier-bid-layout.component.html
+++ b/src/app/shared/layout/supplier-bid-layout/supplier-bid-layout.component.html
@@ -1,7 +1,7 @@
 <div class="row black-border">
     <div class="col-sm-12 p-t-20 p-b-10">
-        <div class="col-sm-8 pull-left">
-            <img src="../../../../assets/images/loginLogo.png" alt="BuildSupply_Logo" width="300" height="60">
+        <div class="col-sm-8 pull-left buildsupply-logo-header">
+            <img src="../../../../assets/images/loginLogo.png" alt="BuildSupply_Logo">
         </div>
     </div>
 </div>
