--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -93,8 +93,10 @@
    } 
 }
 
-.submit-bid-div{
-    background:#ffffff ;
+.parent{
+.row{
+    .submit-bid-div{
+    background:#e6e6e6;
     margin: auto;
     width: 500px;
     height: 225px;
@@ -106,6 +108,11 @@
         padding-bottom: 10px ;
     }
 }
+}
+}
+
+
+
 .submit-bid-row{
    padding: 50px;
    height: calc(100vh - 120px);
@@ -125,4 +132,14 @@
 }
 .no-indent-list{
     text-align: center;
+}
+body{
+    overflow-x: hidden;
+}
+.buildsupply-logo-header{
+   img{
+        width: 250px;
+    height: 50px;
+    padding-left:10px ;
+   }    
 }
