--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -143,3 +143,51 @@ body{
     padding-left:10px ;
    }    
 }
+.main-div-po-outer{
+    background: #FFFFFF !important;
+    margin-top:10px;
+    padding-top:10px;
+    border-top: 1px solid #979797;
+    border-left: 1px solid #979797;
+    border-right: 1px solid #979797;
+}
+
+.main-div-po{
+    padding: 10px 15px;
+}
+
+.second-mat-grid{
+left: calc(((50% - 2.5px) + 1px) * 1) !important;
+}
+.third-mat-grid{
+top: calc(200px) !important;
+    height: calc(203px) !important;
+}
+
+
+
+.mat-list-base .mat-subheader {
+    height: 40px !important;
+    line-height: 16px !important;
+     span{
+        color: #5F5F5F;
+        font-weight: 400;
+        font-size: 14px;
+        padding-left: 8px;
+        }
+}
+
+.header-card-po.mat-subheader{
+        color: #5F5F5F;
+        font-weight: 500;
+        font-size: 16px;
+       
+}
+.delivery-address-po-card{
+    span{
+         color: #5F5F5F;
+        font-weight: 400;
+        font-size: 14px;
+        padding-left: 15px;
+    }
+}
