--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,4 +17,5 @@
     @import "./pages/po-card.component.scss";
     @import "./pages/users.scss";
     @import "./pages/bom.scss";
+    @import "./pages/rfq-bids.component.scss";
     @import "./pages/supplier.scss";
