--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -191,3 +191,26 @@ top: calc(200px) !important;
         padding-left: 15px;
     }
 }
+
+.doc-froala-div{
+    padding:10px;
+}
+.upload-document-label{
+    text-align: center;
+    font-size: 14px;
+}
+.upload-documents-mat-header{
+    .mat-card-header-text{
+        margin: 0;
+    }
+}
+.grey-dotted-border{
+    text-align: center;
+    font-size: 14px;
+}
+.upload-green-tick{
+    margin: auto;
+}
+.files-list {
+ font-size: 12px;
+}
