--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -1,15 +1,15 @@
 <div class="row ">
     <mat-card class="example-card">
-        <mat-card-header>
-            <app-upload #uploadRef (onFileUpdate)="fileUpdate($event)">
+        <mat-card-header class="upload-documents-mat-header">
+            <app-upload #uploadRef [documentListLength]="documentListLength" (onFileUpdate)="fileUpdate($event)">
             </app-upload>
         </mat-card-header>
         <mat-card-content>
-            <mat-list class="pt-0">
-                <mat-list-item *ngFor="let file of documentsName; let i = index">
-                    {{ documentsName}}
+            <mat-list class="pt-10">
+                <mat-list-item class="files-list" *ngFor="let file of documentList; let i = index">
+                    <mat-icon>file_copy</mat-icon>
+                    <span>{{ file.documentName}}</span>
                     <button type="button" (click)="removeFile(i)" mat-icon-button>
-
                         <mat-icon class="font-size-16">cancel</mat-icon>
                     </button>
                 </mat-list-item>
