--- a/src/app/shared/components/upload/upload.component.html
+++ b/src/app/shared/components/upload/upload.component.html
@@ -1,20 +1,23 @@
 <!-- new structure -->
 
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 upload-document-label">
     <label for="upload-document">
       Upload Document
     </label>
   </div>
   <div class="col-xs-12 grey-dotted-border p-t-40" appDnd>
+    <div class="upload-green-tick">
+      <img src="../../../../assets/images/upload-green-arrow.png">
+    </div>
     <input type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" multiple
       (change)="uploadFiles($event.target.files)" />
     <span>Drag and drop or
       <span for="fileDropRef" class="main-color">Browse</span> files
       to upload</span>
   </div>
-  <div class="col-xs-12" *ngIf="fileToUpload && fileToUpload.length">
-    {{ fileToUpload[fileToUpload.length - 1].name }} has been successfully
-    uploaded
+  <div class="col-xs-12 upload-document-label" *ngIf="fileToUpload && fileToUpload.length && documentListLength>0">
+    <!-- {{ fileToUpload[fileToUpload.length - 1].name }} -->
+    File has been successfully uploaded
   </div>
 </div>
