--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -74,14 +74,14 @@
                 <ng-container matColumnDef="ViewGRN">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/view-grn/']">View GRN</a>
+                    <a [routerLink]="['../../po/view-grn/',element.purchaseOrderId]">View GRN</a>
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="AddGRN">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/add-grn/']">Add GRN</a>
+                    <a [routerLink]="['../../po/add-grn/',element.purchaseOrderId]">Add GRN</a>
                   </td>
                 </ng-container>
 
