--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -14,23 +14,23 @@
 
     <mat-card>
       <div class="row">
-        <div class="right-pipe" style="width: 20%;">
+        <!-- <div class="right-pipe" style="width: 20%;">
           <span class="p-l-30 p-r-20 pull-left">23</span>
           <span class="pull-left">Low Stock Material</span>
-        </div>
-        <div class="right-pipe" style="width: 20%;">
+        </div> -->
+        <div class="right-pipe" style="width: 25%;">
           <span class="p-l-10 p-r-20 pull-left">23</span>
           <span class="pull-left">Low Stock Material</span>
         </div>
-        <div class="right-pipe" style="width: 20%;">
+        <div class="right-pipe" style="width: 25%;">
           <span class="p-l-10 p-r-20 pull-left">23</span>
           <span class="pull-left">Low Stock Material</span>
         </div>
-        <div class="right-pipe" style="width: 20%;">
+        <div class="right-pipe" style="width: 25%;">
           <span class="p-l-10 p-r-20 pull-left">23</span>
           <span class="pull-left">Low Stock Material</span>
         </div>
-        <div class="right-pipe" style="width: 20%;">
+        <div style="width: 25%;">
           <span class="p-l-10 p-r-20 pull-left">23</span>
           <span class="pull-left">Low Stock Material</span>
         </div>
