--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -44,7 +44,7 @@
                     <span>{{ projectDetails.endDate | date }}</span>
                   </div>
                   <div class="font-size12 gray-color text-left width50Percent">
-                    <span>₹ Construction Cost: {{ projectDetails.cost }} Cr</span>
+                    <span>₹ Construction Cost: {{ projectDetails.cost  | number : '1.2-2' }} Cr</span>
                   </div>
                 </div>
               </div>
@@ -55,9 +55,9 @@
                     </div> -->
             </div>
             <div class="col-xs-2 text-right">
-              <a href="javascript:void(0)"
+              <!-- <a href="javascript:void(0)"
                 ><i class="material-icons main-color">file_copy</i></a
-              >
+              > -->
               <a
                 href="javascript:void(0)"
                 (click)="delete(projectDetails.projectId, $event)"
@@ -74,16 +74,16 @@
           <div class="row m-t-20">
             <div class="col-xs-8">
               <div class="border-container display-flex p-l-5 p-r-5">
-                <div
+                <!-- <div
                   class="col-sm-2 border-right border-container-txt p-t-10 p-b-10 display-flex"
                 >
                   <div class="font-size20 text-bold">
                     {{ projectDetails.lowStockMaterialCount }}
                   </div>
                   <div class="font-size12 p-l-15">Low Stock Material</div>
-                </div>
+                </div> -->
                 <div
-                  class="col-sm-3 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
+                  class="col-sm-4 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
                 >
                   <div class="font-size20 text-bold">
                     {{ projectDetails.matCount }}
@@ -94,7 +94,7 @@
                   </div>
                 </div>
                 <div
-                  class="col-sm-3 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
+                  class="col-sm-4 border-right gray-color p-t-10 p-b-10 p-l-30 display-flex"
                 >
                   <div class="font-size20 text-bold">
                     {{ projectDetails.openIndentCount }}
@@ -113,7 +113,7 @@
                     Order
                   </div>
                   <div class="font-size12 text-right p-l-25 m-t-15">
-                    ₹{{ projectDetails.purchaseOrderCost }} Cr
+                    ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
                   </div>
                 </div>
               </div>
