--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -43,10 +43,10 @@
           <td class="text-left" mat-cell *matCellDef="let element">
             <!-- <input type="checkbox" /> -->
             <mat-checkbox (change)="element.checked = !element.checked" [checked]="element.checked">
-                     <div class="limited-character">
+                     <div class="limited-character" matTooltip=" {{ element.materialName }}">
                         {{ element.materialName }} <br>
                       </div>
-                       <div class="limited-character">
+                       <div class="limited-character"  matTooltip=" {{ element.materialGroup }}">
                           <span class="category-name">
                              {{ element.materialGroup}}
                          </span>
