issue-to-indent dialog qty fixed, 'i' margin fixed, cursors given to various icons Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -96,7 +96,7 @@
             <a>
               <mat-icon>delete_outline</mat-icon>
             </a>
-            <a (click)="openDialog1(element.materialId,projectId)">Issue to Indent
+            <a (click)="openDialog1(element.materialId,projectId)"  class="issue-to-indent-modal">Issue to Indent
               <mat-icon class="icon-inverse">open_in_browser</mat-icon></a>
           </td>
         </ng-container>
