--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -51,16 +51,16 @@
                         <div class="col-sm-6">
                          <span>Issued Date</span>
                          <ng-container *ngFor="let date of indent.IssuedQuantityList">
-                           <span>
-                             {{date.issuedDate}}<br>
+                           <span><br>
+                             {{date.issuedDate}}
                            </span>
                          </ng-container>
                         </div>
                          <div class="col-sm-6">
                           <span>Issued Quantity</span>
                            <ng-container *ngFor="let date of indent.IssuedQuantityList">
-                           <span>
-                             {{date.issuedQty}}<br>
+                           <span><br>
+                             {{date.issuedQty}}
                            </span>
                          </ng-container>
                         </div>
