--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -247,7 +247,7 @@ top: calc(200px) !important;
 }
 .show-detail-qty{
     position: absolute;
-   margin-left: 16px;
+   margin-left: 20px;
     margin-top: -3px;
     img{
         z-index: 10;
@@ -255,7 +255,7 @@ top: calc(200px) !important;
 }
 .show-detail-qty{
     position: absolute;
-   margin-left: 16px;
+   margin-left: 20px;
     margin-top: -3px;
     .name-of-mat{
         z-index: 10;
@@ -346,4 +346,10 @@ mat-expansion-panel{
 }
 mat-accordion{
       border-radius: 0px !important;
+}
+mat-icon{
+    cursor: pointer;
+}
+.issue-to-indent-modal{
+     cursor: pointer;   
 }
